# prettier-pdf

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  images2pdf.cpp  images2pdf.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  opencvhelper.cpp  opencvhelper.h
